--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
   <body>
     <canvas id="canvas" width="640" height="480"></canvas>
+    <!--Independencies-->
+    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+
+    <!--Game Scripts-->
     <script src="./Scripts/Core/game.js"></script>
   </body>
 </html>
